[tool.poetry]
name = "pubmed-fetcher-kiran"
version = "0.10.1"
description = "Fetch research papers based on a user-specified query (supports Pubmed queries)"
authors = ["kiran-bsv <boddepallisai@iitbhilai.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pytest = ">=8.3.4,<9.0.0"



[tool.poetry.group.dev.dependencies]
pytest = "*"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher_kiran.cli:main"




